# orka

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/benches/: orka_benchmarks.rs
core/examples/: basic_pipeline.rs  registry_basic.rs
core/src/: error.rs  lib.rs  registry.rs
core/src/conditional/: builder.rs  mod.rs  provider.rs  scope.rs
core/src/core/: context.rs  context_data.rs  control.rs  mod.rs  pipeline_trait.rs  step.rs
core/src/pipeline/: definition.rs  execution.rs  hooks.rs  mod.rs
core/tests/: conditional_scope_tests.rs  context_management_tests.rs  error_handling_tests.rs  pipeline_execution_tests.rs  registry_tests.rs
core/tests/common/: mod.rs
examples/ecommerce_app/: .env.example  Cargo.toml  README.md  schema.sql
examples/ecommerce_app/src/: config.rs  errors.rs  main.rs  state.rs
examples/ecommerce_app/src/models/: cart_item.rs  mod.rs  order.rs  order_item.rs  product.rs  user.rs
examples/ecommerce_app/src/pipelines/: cart_pipeline.rs  checkout_pipeline.rs  common_steps.rs  contexts.rs  factories.rs  mod.rs  signin_pipeline.rs  signup_pipeline.rs  webhook_pipeline.rs
examples/ecommerce_app/src/services/: auth_service.rs  email_mock.rs  mod.rs  payment_mock.rs
examples/ecommerce_app/src/web/: mod.rs  routes.rs
examples/ecommerce_app/src/web/handlers/: auth_handlers.rs  cart_handlers.rs  checkout_handlers.rs  mod.rs  product_handlers.rs  webhook_handlers.rs
