[package]
name = "orka"
version = "0.1.0"
edition = "2021"
authors = ["Excerion Sun <dev@excsn.com>"]
license = "MPL-2.0"

description = "An asynchronous, pluggable, and type-safe workflow engine for Rust, designed for orchestrating complex multi-step business processes."
readme = "README.md"
homepage = "https://github.com/excsn/orka"
repository = "https://github.com/excsn/orka"
keywords = ["workflow", "pipeline", "async", "orchestration", "state-machine"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[dependencies]
# For ergonomic error handling, especially in user-provided handlers
# and for OrkaError to wrap general errors.
anyhow = "^1.0"

# For easily creating custom error types (OrkaError enum)
thiserror = "^2.0"

# For using async functions in traits (e.g., PipelineProvider, AnyConditionalScope, AnyPipeline)
async-trait = "^0.1.77"

tracing = "^0"

parking_lot = "^0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] } 
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.10"
serial_test = "3.2.0"

[lib]
name = "orka"
path = "src/lib.rs"

[[bench]]
name = "orka_benchmarks"
harness = false