[package]
name = "ecommerce_app"
version = "0.1.0"
edition = "2021"
publish = false # This is an example, not meant to be published

[dependencies]
# --- Orka Workflow Engine ---
orka = { path = "../../core" } # Path dependency to the local orka library

# --- Web Framework ---
actix-web = "4"
actix-rt = "2" # For older Actix versions, or if main is not actix_web::main

# --- Database ---
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# --- Serialization / Deserialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Error Handling & Utilities ---
anyhow = "1.0" # Application might use anyhow for its top-level errors too
thiserror = "1.0" # For AppError definition
dotenvy = "0.15" # For .env file loading
uuid = { version = "^1", features = ["v4", "serde"] } # Use a version compatible with sqlx if needed
chrono = { version = "0.4", features = ["serde"] } # For timestamps

# --- Async ---
tokio = { version = "1", features = ["full"] } # For #[tokio::main] and other utilities
futures-util = "^0"

# --- Logging/Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # Example subscriber
tracing-actix-web = "0.7.18"

# reqwest = { version = "0.11", features = ["json"] }

# --- Password Hashing ---
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] } # For argon2 salt generation

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# jemallocator = "0.5" # Optional: for performance on Linux/macOS

# Ensure main.rs is the entry point
[[bin]]
name = "ecommerce_app_server" # Name of the binary
path = "src/main.rs"